Fix alignment issue on inline facet divider

--- a/components/ProductsPage/ProductsPage.module.scss
+++ b/components/ProductsPage/ProductsPage.module.scss
@@ -7,6 +7,9 @@
                 float: right;
             }
         }
+        hr {
+            clear: both;
+        }
         display: none;
         background-color: globals.$brand-bg-light;
         padding: globals.$padding;
